# cognee-hackathons

./: .gitignore  README.md  docker-compose.yml  requirements.txt  submission.md
ai-memory-hackathon-2026-02-07/: .dockerignore  .env.example  .env.example.local  .gitignore  AGENTS.md  Dockerfile  README.md  custom_generate_completion.py  custom_retriever.py  docker-compose.yml  download-from-spaces.py  hackathon-banner.avif  initial_graph_creation.py  pyproject.toml  responses.txt  restore-snapshots.py  setup.py  solution_enrichtment.py  solution_q_and_a.py  upload-to-spaces.py
ai-memory-hackathon-2026-02-07/.do/: app.yaml
ai-memory-hackathon-2026-02-07/.github/skills/qdrant-analytics/: SKILL.md
ai-memory-hackathon-2026-02-07/.github/skills/qdrant-anomaly-detection/: SKILL.md
ai-memory-hackathon-2026-02-07/.github/skills/qdrant-search/: SKILL.md
ai-memory-hackathon-2026-02-07/cognee-pipeline/: .env.example  docker-compose.local.yml  export_qdrant_snapshots.py  ingest.py  migrate_lancedb_to_qdrant.py  pyproject.toml  reindex.py  restore_qdrant_snapshots.py  test_search.py  upload_to_spaces.py
ai-memory-hackathon-2026-02-07/cognee-pipeline/deploy/: digitalocean-droplet.md  digitalocean-spaces.md  do-app-spec.yaml
ai-memory-hackathon-2026-02-07/cognee-pipeline/examples/: README.md
ai-memory-hackathon-2026-02-07/cognee-pipeline/examples/cloud/: .env.example  README.md  demo.py
ai-memory-hackathon-2026-02-07/cognee-pipeline/examples/local/: .env.example  README.md  demo.py  docker-compose.yml  restore_snapshots.py
ai-memory-hackathon-2026-02-07/helper_functions/: __init__.py  export_cognee.py  import_cognee.py
ai-memory-hackathon-2026-02-07/optional_data_for_enrichment/: new_invoices.csv  new_transactions.csv
ai-memory-hackathon-2026-02-07/project1-procurement-search/: app.py  main.py  pyproject.toml
ai-memory-hackathon-2026-02-07/project2-spend-analytics/: .env.example  app.py  main.py  pyproject.toml
ai-memory-hackathon-2026-02-07/project3-anomaly-detective/: app.py  main.py  pyproject.toml
ai-memory-hackathon-2026-02-07/prompts/: invoice_prompt.txt  system_prompt.txt  transaction_prompt.txt  user_prompt.txt
ai-memory-hackathon-2026-02-07/shared/: embeddings.py  llm.py
app/: main.py  (+5 more)
cognee-companybrain-hackathon-2026-06-16/: .gitignore  BOT.md  README.md  pyproject.toml
cognee-companybrain-hackathon-2026-06-16/sample_data/: granola.txt
cognee-companybrain-hackathon-2026-06-16/scripts/: repro_double_entity.py  run_ingest.py  verify_v2.py
cognee-companybrain-hackathon-2026-06-16/src/company_brain/: classifier.py  cli.py  cognee_client.py  env.py  ingest.py  normalize.py  schema.py  slackbot.py
cognee-companybrain-hackathon-2026-06-16/tests/: test_normalize.py
cognee-companybrain-hackathon-2026-06-16/tutorial/: README.md  graph.html  graph_default.html  graph_typed.html  intro_to_cognee.executed.ipynb  intro_to_cognee.ipynb  setup.sh
cognee-gtm-brain-hackathon-2026-06-26/: .env.example  .gitignore  BOT.md  README.md  pyproject.toml
cognee-gtm-brain-hackathon-2026-06-26/sample_data/: slack_1.txt  slack_2.txt  slack_3.txt
cognee-gtm-brain-hackathon-2026-06-26/sample_data/gtm_brain/: account-deep-dive_ANCHOR.md  calendar_next-24h.ics  granola_clay-sponsor-intro-transcript.md  granola_keynote-target-call-transcript.md  granola_warsaw-debrief-transcript.md  icp_speaker.md  icp_sponsor.md
cognee-gtm-brain-hackathon-2026-06-26/sample_data/gtm_brain/email-threads/: clay-sponsorship-thread.md  keynote-sam-jacobs-thread.md
cognee-gtm-brain-hackathon-2026-06-26/sample_data/gtm_brain/tables/: apollo_people-export_speakers.csv  attio_companies.csv  attio_deals.csv  clay_table_sponsor-prospects.csv  do-not-approach.csv  (+2 more)
cognee-gtm-brain-hackathon-2026-06-26/sample_data/gtm_brain_user_b/: calendar_next-24h.ics  granola_vercel-sponsor-intro-transcript.md  icp_sponsor.md
cognee-gtm-brain-hackathon-2026-06-26/scripts/: gtm_queries.py  repro_double_entity.py  run_gtm_ingest.py  run_ingest.py  run_multiuser_demo.py  verify_v2.py
cognee-gtm-brain-hackathon-2026-06-26/src/gtm_brain/: classifier.py  cli.py  cognee_client.py  env.py  gtm_people.py  ingest.py  multiuser.py  normalize.py  people.py  schema.py  slackbot.py
cognee-gtm-brain-hackathon-2026-06-26/tests/: test_gtm_files.py  test_normalize.py
cognee-gtm-brain-hackathon-2026-06-26/tutorial/: GRAPHS.md  README.md  graph_default.html  graph_typed.html  graph_user_a_warsaw.html  graph_user_b_berlin.html  intro_to_cognee.ipynb
cognee-personal-memory-hackathon-2026-06-16/: README.md  personal_assistant_brain_graph.html  pyproject.toml  setup.sh
cognee-personal-memory-hackathon-2026-06-16/src/company_brain/: cognee_client.py
cognee-personal-memory-hackathon-2026-06-16/templates/personal_assistant_brain/: IMPLEMENTATION_PLAN.md  README.md  granola_dlt.py  personal_assistant_brain.py  slack_dlt.py
cognee-personal-memory-hackathon-2026-06-16/tutorial/: personal_memory_life_assistant.executed.ipynb  personal_memory_life_assistant.ipynb
(+331 files in other folders)
