[project]
name = "gtm-brain"
version = "0.0.1"
description = "Unify GTM accounts, sponsors, speakers, deals and conversations (Slack, Granola, email, calendar) into one Cognee knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "cognee>=1.1.0",
    "slack-sdk>=3.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
# Everything needed to run tutorial/intro_to_cognee.ipynb.
tutorial = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
gtm-brain-ingest = "gtm_brain.cli:main"
gtm-brain-ingest-brain = "gtm_brain.cli:brain_main"
gtm-brain-slackbot = "gtm_brain.slackbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
