[project]
name = "personal-memory-assistant"
version = "0.0.1"
description = "A personal memory / life-assistant brain on Cognee — the individual counterpart to the company-brain hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "cognee>=1.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
# Everything needed to run tutorial/personal_memory_life_assistant.ipynb.
tutorial = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]
# The dlt-based ingestion scaffold under templates/personal_assistant_brain/.
personal-assistant = [
    "dlt[duckdb]>=1.27.0",
    "httpx>=0.27.0",
    "jsonpath-ng>=1.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `src/company_brain` is a vendored subset (normalize, schema, cognee_client)
# copied from the company-brain hackathon so this folder runs standalone. The
# personal-assistant template imports it as a small library.
[tool.hatch.build.targets.wheel]
packages = ["src/company_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"
