[project]
name = "project1-procurement-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cognee==0.4.1",
    "cognee-community-vector-adapter-qdrant==0.1.0",
    "fastapi>=0.128.0",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.31",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
cognee = [
    "cognee==0.4.1",
    "cognee-community-vector-adapter-qdrant==0.1.0",
]
